<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="Buen.Pastor.app.Activity.ui.docente.ModificarDocenteFragment">

<!-- Toolbar con título y logo -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarModificarDocente"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/azul_general"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btnVolverAtrasModificarDocente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_volver_atras"
                android:contentDescription="@string/volver"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar_docente"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/blanco"
                android:layout_weight="1"
                android:contentDescription="@string/descripcion_modificar_docente"
                tools:ignore="InefficientWeight" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:adjustViewBounds="true"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Contenido del formulario de modificación -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarModificarDocente"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                app:startIconDrawable="@drawable/ic_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreCompletoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/posicion"
                app:startIconDrawable="@drawable/ic_posicion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPosicionModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni"
                app:startIconDrawable="@drawable/ic_dni">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDNIModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp"
                    android:inputType="phone"  />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmailModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                app:startIconDrawable="@drawable/ic_telefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTelefonoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                app:startIconDrawable="@drawable/ic_direccion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDireccionModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtFechaContratacionLayoutModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_contratacion"
                app:startIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFechaContratacionModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxActivoModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activo"
                android:checked="true"
                android:textSize="16sp" />

            <!-- Botón para modificar el docente -->
            <Button
                android:id="@+id/btnModificarDocente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar_docente"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/azul_general"
                android:textColor="@color/blanco" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
